--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
-    - "2.7"
+  - "2.7"
 
 install: "pip install -r requirements.txt"
 
-script: python flaskr_tests.py
+script:
+  coverage run flaskr_tests.py
 
 after_success:
-  - coveralls
+  coveralls
