--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-click==6.6
-coverage==4.1
 Flask==0.11.1
-itsdangerous==0.24
+Flask-Testing==0.5.0
 Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.11.10
+click==6.6
+coverage==4.1
+coveralls==1.1
+docopt==0.6.2
+itsdangerous==0.24
+requests==2.10.0
+wsgiref==0.1.2
