--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: "pip install -r requirements.txt"
 
 script:
-  coverage run flaskr_tests.py
+  coverage run --source=. flaskr_tests.py
 
 after_success:
   coveralls
