Rename tests file.
Renaming the tests file so it will be picked up by unittest.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: "pip install -r requirements.txt"
 
 script:
-  coverage run --source=. flaskr_tests.py
+  coverage run --source=. tests_all.py
 
 after_success:
   coveralls
