--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==0.11.1
+Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
 Jinja2==2.8
 MarkupSafe==0.23
+SQLAlchemy==1.0.14
 Werkzeug==0.11.10
 click==6.6
 coverage==4.1
