--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==0.11.1
+Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.14
 Werkzeug==0.11.10
+backports.pbkdf2==0.1
 click==6.6
 coverage==4.1
 coveralls==1.1
