--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alabaster==0.7.9
+astroid==1.4.9
 Babel==2.3.4
+backports.functools-lru-cache==1.3
 backports.pbkdf2==0.1
 click==6.6
+configparser==3.5.0
 coverage==4.1
 coveralls==1.1
 docopt==0.6.2
@@ -13,13 +16,19 @@ Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
 Foundations==2.1.0
 imagesize==0.7.1
+isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
+lazy-object-proxy==1.2.2
 linecache2==1.0.0
 Manager==2.0.5
 MarkupSafe==0.23
+mccabe==0.5.3
 Oncilla==0.1.0
+pep8==1.7.0
+pyflakes==1.3.0
 Pygments==2.1.3
+pylint==1.6.4
 pytz==2016.10
 requests==2.10.0
 six==1.10.0
@@ -29,4 +38,6 @@ sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.0.14
 traceback2==1.4.0
 unittest2==1.1.0
+vulture==0.11
 Werkzeug==0.11.11
+wrapt==1.10.8
