--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: python
 python:
   - "2.7"
 
-install: "pip install -r requirements.txt"
+install:
+  - pip install -r requirements.txt
 
 script:
-  coverage run --source=. test_all.py
+  - coverage run --source=. test_all.py
+  - check.sh
 
 after_success:
-  coveralls
+  - coveralls
