--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Login==0.3.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
+Flask-WTF==0.13.1
 Foundations==2.1.0
 imagesize==0.7.1
 isort==4.2.5
@@ -41,3 +42,4 @@ unittest2==1.1.0
 vulture==0.11
 Werkzeug==0.11.11
 wrapt==1.10.8
+WTForms==2.1
